--- a/dev.html
+++ b/dev.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>updated by dvelopers</h1>
+    <h1>updated by developers(mounika)</h1>
+    <h1>updated by developers(navya)</h1>
 </body>
 </html>
