updated by jayasree

--- a/dev.html
+++ b/dev.html
@@ -8,5 +8,6 @@
 <body>
     <h1>updated by developers(mounika)</h1>
     <h1>updated by developers(navya)</h1>
+    <h1>updated by developers(jaya sree)</h1>
 </body>
 </html>
