--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>updated by developers(mounika)</h1>
     <h1>updated by developers(navya)</h1>
     <h1>updated by developers(jaya sree)</h1>
+    <h1>updated by developers(kavya)</h1>
 </body>
 </html>
