updated by kowsalya

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>updated by developers(navya)</h1>
     <h1>updated by developers(jaya sree)</h1>
     <h1>updated by developers(kavya)</h1>
+    <h1>updated by developers(kowsalya)</h1>
 </body>
 </html>
